tests/ast_interpreter/err_float_type.expected
<string>:2:11: error: float cannot be applied to Null
    print(float(null));
          ^^^^^^^^^^^
