tests/ast_interpreter/err_float_type.nx
fun main() {
    print(float(null));
}
